# bistrot

./: LICENSE  README.md  pyproject.toml
examples/: klass.py  ops.py
src/bistrot/: __init__.py  __main__.py  bistrot.py  cli_args.py  server.py
tests/: test_bistrot.py  test_cli_args.py  test_server.py
